--- a/Practical 1/README
+++ b/Practical 1/README
@@ -1,1 +1,9 @@
-Opem
+**Dynamic Jagged Array Implementation**
+
+This repository contains my implementation of the COS110 Practical 1: Dynamic Jagged Array. The practical involves creating a dynamic 2D jagged array of dynamic integers in C++. The goal is to read data from both text files and the terminal, manage memory allocation and deallocation, and print array information according to specified formats. The provided PDF specifications outline the detailed requirements for the assignment. 
+
+To compile and run the code, open the command prompt and use the command `make run`. You can clean the project using `make clean`. Note that the provided `makefile` might need adjustments, especially regarding the use of `del` instead of `rm` on other systems.
+
+In the `main` function of the `main.cpp` file, you can switch between the `populateFromTerminal()` and `populateFromFile(fileName)` functions to either input data from the terminal or a text file. This implementation adheres to C++98 standards, as per the specifications.
+
+For detailed information about the assignment, please refer to the provided specifications PDF.
